// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/App.vue matchs snapshot 1`] = `
<div
  id="app"
>
  <div
    id="loading"
  >
    <p>
      Loading...
    </p>
  </div>
</div>
`;

exports[`@/App.vue matchs snapshot 2`] = `
<div
  id="app"
>
  <router-view-stub />
</div>
`;
